alignment issues

--- a/css/general.css
+++ b/css/general.css
@@ -18,7 +18,7 @@ h2 {
 }
 
 .laura {
-    text-align: left;
+    align-self: left;
 }
 
 h3 {
